--- a/Book Store/MainWindow.xaml
+++ b/Book Store/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Book_Store"
         xmlns:resx="clr-namespace:Book_Store.Properties"
         mc:Ignorable="d"
-        Title="{x:Static resx:MainWindowStrings.WindowTitle}" Height="620" Width="1000">
+        Title="{x:Static resx:MainWindowStrings.WindowTitle}" Height="670" Width="1000">
     <Grid>
         <TabControl x:Name="tabControl" SelectionChanged="tabControl_SelectionChanged">
             <TabItem Header="{x:Static resx:MainWindowStrings.TabItemBooks}">
@@ -15,20 +15,35 @@
                         <ColumnDefinition Width="4*"/>
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView x:Name="listViewBooks" SelectionMode="Single" SelectionChanged="listViewBooks_SelectionChanged">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="200"></GridViewColumn>
-                                <GridViewColumn Header="Author" DisplayMemberBinding="{Binding Author}" Width="130"></GridViewColumn>
-                                <GridViewColumn Header="Publisher" DisplayMemberBinding="{Binding Publisher}" Width="140"></GridViewColumn>
-                                <GridViewColumn Header="Pages" DisplayMemberBinding="{Binding Pages}" Width="40"></GridViewColumn>
-                                <GridViewColumn Header="Genre" DisplayMemberBinding="{Binding Genre}" Width="90"></GridViewColumn>
-                                <GridViewColumn Header="Year" DisplayMemberBinding="{Binding YearPublishing, StringFormat=yyyy}" Width="40"></GridViewColumn>
-                                <GridViewColumn Header="Cost price" DisplayMemberBinding="{Binding CostPrice, StringFormat=\{0:0.00\}}" Width="60"></GridViewColumn>
-                                <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price, StringFormat=\{0:0.00\}}" Width="60"></GridViewColumn>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="20"/>
+                            <RowDefinition Height="1*"/>
+                        </Grid.RowDefinitions>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="250"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox x:Name="searchBookText" TextChanged="searchBookText_TextChanged"/>
+                            <CheckBox x:Name="showDecommissionBooksCheckBox" Content="Show decommission books" Grid.Column="1" HorizontalAlignment="Right" Unchecked="showDecommissionBooksCheckBox_Unchecked" Checked="showDecommissionBooksCheckBox_Checked" Margin="0,3,0,0"/>
+                        </Grid>
+                        <ListView Grid.Row="1" x:Name="listViewBooks" SelectionMode="Single"  SelectionChanged="listViewBooks_SelectionChanged" Margin="0,4,0,0">
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="200"></GridViewColumn>
+                                    <GridViewColumn Header="Author" DisplayMemberBinding="{Binding Author}" Width="130"></GridViewColumn>
+                                    <GridViewColumn Header="Publisher" DisplayMemberBinding="{Binding Publisher}" Width="140"></GridViewColumn>
+                                    <GridViewColumn Header="Pages" DisplayMemberBinding="{Binding Pages}" Width="40"></GridViewColumn>
+                                    <GridViewColumn Header="Genre" DisplayMemberBinding="{Binding Genre}" Width="90"></GridViewColumn>
+                                    <GridViewColumn Header="Year" DisplayMemberBinding="{Binding YearPublishing, StringFormat=yyyy}" Width="40"></GridViewColumn>
+                                    <GridViewColumn Header="Cost price" DisplayMemberBinding="{Binding CostPrice, StringFormat=\{0:0.00\}}" Width="60"></GridViewColumn>
+                                    <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price, StringFormat=\{0:0.00\}}" Width="60"></GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                    </Grid>
+
                     <StackPanel Grid.Column="1" Margin="5,0,5,0">
                         <StackPanel Orientation="Vertical">
                             <Label Content="Name*:"/>
@@ -99,6 +114,7 @@
                         <Button x:Name="addBookButton" Content="Add" Padding="1,4,1,4" Margin="0,15,0,4" Click="addBookButton_Click"/>
                         <Button x:Name="changeBookButton" Content="Change" Padding="1,4,1,4" Margin="0,0,0,4" Click="changeBookButton_Click"/>
                         <Button x:Name="deleteBookButton" Content="Delete" Padding="1,4,1,4" Margin="0,0,0,4" Click="deleteBookButton_Click"/>
+                        <Button x:Name="decommissionBookButton" Content="Decommission" Padding="1,4,1,4" Margin="0,0,0,4" Click="decommissionBookButton_Click"/>
                         <Button x:Name="updateDbBookButton" Content="Update DB / Clear fields" Padding="1,4,1,4" Margin="0,0,0,4" Click="updateDbBookButton_Click"/>
                     </StackPanel>
                 </Grid>
